--- a/RPM_Tool.csproj
+++ b/RPM_Tool.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="Stripe.net" Version="35.10.0" />
     <PackageReference Include="Twilio" Version="5.38.0" />
   </ItemGroup>
 
